--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Test::Simple
 
+0.05  Wed May  9 20:40:35 BST 2001
+    - Forgot to include the exit tests.
+    - Trouble with exiting properly under 5.005_03 and 5.6.1 fixed
+    - Turned off buffering
+    - Now explicitly tested with 5.005_03
+
 0.04  Mon Apr  2 11:05:01 BST 2001
     - Fixed "require Test::Simple" so it doesn't bitch and exit 255
     - Now installable with the CPAN shell.
