--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension Test::Simple
 
+0.10  Tue Jul 31 15:01:11 EDT 2001
+    * Test::More is now distributed in this tarball.
+    * skip and todo tests work!
+    * Extended use_ok() so it can import
+    - A little internal rejiggering
+    - Added a TODO file
+
+0.09  Wed Jun 27 02:55:54 EDT 2001
+    - VMS fixes
+
 0.08  Fri Jun 15 14:39:50 EDT 2001
     - Guarding against $/ and -l
     - Reformatted the way failed tests are reported to make them stand out
