--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ Revision history for Perl extension Test::Simple
       name was a number.
     - ok() less draconian about test names
     - Added temporary special case for Parrot::Test
+    - Now requiring File::Spec for our tests.
 
 0.18  Wed Sep  5 20:35:24 EDT 2001
     * ***API CHANGE*** can_ok() only counts as one test
