--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Test::Simple
 
-0.43
+0.43  Thu Apr 11 22:55:23 EDT 2002
+    - Adrian Howard added TB->maybe_regex()
     - Adding Mark Fowler's suggestion to make diag() return
       false.
     - TB->current_test() still not working when no tests were run via
