--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl extension Test::Simple
 
+0.44
+    - names containing newlines no longer produce confusing output
+      (from chromatic)
+    - chromatic provided a fix so can_ok() honors can() overrides.
+    - Nick Ing-Simmons suggested todo_skip() be a bit clearer about
+      the skipping part.
+
 0.43  Thu Apr 11 22:55:23 EDT 2002
     - Adrian Howard added TB->maybe_regex()
     - Adding Mark Fowler's suggestion to make diag() return
