--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ Revision history for Perl extension Test::Simple
     * Added TB->has_plan() from Adrian Howard
     - Clarified the meaning of 'actual_ok' from TB->details
     * Added TB->details() from chromatic
+    - Neil Watkiss fixed a pre-5.8 test glitch with threads.t
 
 0.45  Wed Jun 19 18:41:12 EDT 2002
     - Andy Lester made the SKIP & TODO docs a bit clearer.
