--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Test::Simple
 
+0.48
+    - Mention Test::Class in Test::More's SEE ALSO
+    * use_ok() now DWIM for version checks
+    - More problems with ithreads fixed.
+
 0.47  Mon Aug 26 03:54:22 PDT 2002 
     * Tatsuhiko Miyagawa noticed Test::Builder was accidentally storing 
       objects passed into test functions causing problems with tests 
