Noting Nick's needs for a better way to analyze the pass/fail inside the test program itself.

--- a/TODO
+++ b/TODO
@@ -27,3 +27,7 @@
     Trap bare exit() calls.
 
     Add diag() to details().
+
+    Add is_passing() method to check if we're passing?
+
+    Add at_end() callback?
