* Drew Taylor added a 'no_diag' option to Test::More to switch       off all diag() statements.

--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@ Revision history for Perl extension Test::Simple
     - More problems with ithreads fixed.
     * Test::Harness upgrade no longer optional.  It was causing too
       many problems when the T::H upgrade didn't work.
+    * Drew Taylor added a 'no_diag' option to Test::More to switch
+      off all diag() statements.
 
 0.47  Mon Aug 26 03:54:22 PDT 2002 
     * Tatsuhiko Miyagawa noticed Test::Builder was accidentally storing 
