--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.49
+0.48_02  Mon Jul 19 02:07:23 EDT 2004
     * Overloaded objects as names now won't blow up under threads
       [rt.cpan.org 4218 and 4232]
     * Overloaded objects which stringify to undef used as test names
@@ -12,8 +12,6 @@
     - Change from CVS to Aegis
     - is_deeply() will now do some basic argument checks to guard against
       accidentally passing in a whole array instead of its reference.
-
-0.48_02  * UNRELEASED *
     - Mentioning Test::Differences, Test::Deep and Bundle::Test.
     - Removed dependency on File::Spec.
     - Fixing the grammar of diagnostic outputs when only a single test
