--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.49
+    - t/harness_active.t would fail for frivolous reasons with older
+      MakeMakers (test bug) [thanks Bill Moseley for noticing]
+
 0.48_02  Mon Jul 19 02:07:23 EDT 2004
     * Overloaded objects as names now won't blow up under threads
       [rt.cpan.org 4218 and 4232]
