Note change to SVK. Increment and date for release.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
-0.50
+0.50  Sat Nov 20 00:28:44 EST 2004
     * Fixed bug in fail-more test on Windows (not a real bug).
       [rt.cpan.org 8022]
+    - Change from CVS to SVK.  Hopefully this is the last version control
+      system change.
     - Again removing File::Spec dependency (came back in 0.48_02)
     - Change from Aegis back to CVS
 
