--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.51
+0.51  Tue Nov 23 04:51:12 EST 2004
     - Fixed bug in fail_one.t on Windows (not a real bug).
     - TODO reasons as overloaded objects now won't blow up under threads.
       [Autrijus Tang]
