--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
       [rt.cpan.org 7031]
     - eq_array() and eq_hash() could hold onto references if they failed
       keeping them in memory and preventing DESTROY.  [rt.cpan.org 7032]
+    - Thanks to Fergal Daly for ferretting out all these is_deeply and eq_*
+      tests.
 
 0.51  Tue Nov 23 04:51:12 EST 2004
     - Fixed bug in fail_one.t on Windows (not a real bug).
