* $how_many is optional for skip() and todo_skip().  Thanks to       Devel::Cover for pointing this out.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.54
+    * $how_many is optional for skip() and todo_skip().  Thanks to 
+      Devel::Cover for pointing this out.
+
 0.53_01  Sat Dec 11 19:02:18 EST 2004
     - current_test() can now be set backward.
     - *output() methods now handle tied handles and *FOO{IO} properly.
