--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.54  
+0.54  Wed Dec 15 04:18:43 EST 2004
     * $how_many is optional for skip() and todo_skip().  Thanks to 
       Devel::Cover for pointing this out.
     - Removed a user defined function called err() in the tests to placate
