--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.64
+    - skip() will now warn if you get the args backwards.
+
 0.63  Sun Jul  9 02:36:36 PDT 2006
     * Fixed can_ok() to gracefully handle no class name.
       Submitted by "Pete Krawczyk" <perl@bsod.net>
