--- a/Changes
+++ b/Changes
@@ -4,11 +4,11 @@
       [rt.cpan.org 8891]
 
     Bug fixes
-    - RT#34050: using a relative path to perl broke tests
-    - RT#34065: use_ok() broke $SIG{__DIE__} in the used module
-    - RT#33642: diagnostics for isnt() were confusing on failure
-    - RT#33626: warnings when MakeMaker's version contained _
-    - RT#28836: add explicit test that non-integer plans die correctly
+    - using a relative path to perl broke tests              [rt.cpan.org 34050]
+    - use_ok() broke $SIG{__DIE__} in the used module        [rt.cpan.org 34065]
+    - diagnostics for isnt() were confusing on failure       [rt.cpan.org 33642]
+    - warnings when MakeMaker's version contained _          [rt.cpan.org 33626]
+    - add explicit test that non-integer plans die correctly [rt.cpan.org 28836]
 
 0.80  Sun Apr  6 17:25:01 CEST 2008
     Test fixes
