Better TODO handling.
This applies the patch from
http://rt.cpan.org/Public/Bug/Display.html?id=38018.  However the
/(?:end|start)_todo/ methods have been renamed to /todo_(?:start|end)/ to be
compatible with the PHP implementation of Test::More.  See:
http://search.cpan.org/~avar/Test.php-0.12/Test.php

--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@
     New Features
     * Adam Kennedy bribed me to add new_ok().  The price was one DEFCON license key.
       [rt.cpan.org 8891]
+    * Improved 'todo' support.
+      TODO tests can now start and end with 'todo_start' and 'todo_end'
+      methods called on the Test::Builder singleton. [rt.cpan.org 38018]
 
     Features Changed
     * Changed the message for extra tests run to show the number of tests run rather than
