Date for release.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.81_01
+0.81_01  Sat Sep  6 15:13:50 PDT 2008
     New Features
     * Adam Kennedy bribed me to add new_ok().  The price was one DEFCON license key.
       [rt.cpan.org 8891]
