Moving the TB2 stuff out of the way for release.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.81_02
+0.81_02  Tue Sep  9 04:35:40 PDT 2008
     New Features
     * Test::Builder->reset_outputs() to reset all the output methods back to
       their defaults.
